2009-10-14  Juan Pedro Bolivar Puente  <raskolnikov@es.gnu.org>

	* emargo/emargolib.php (emargo_print_commentbox): Fixed a bug that
	made comments to get wrong when showing/hiding/posting comments.

	* *: Fixed translations. Spanish translation almost finished.

2009-09-22  Juan Pedro Bolivar Puente  <raskolnikov@es.gnu.org>

	* jsxaal/dist/jsxaal.css: Fixed Jsxaal not showing properly.

	* emargo/ajax/ajaxfunctions.php, emargo/js/emargo.js, lib.php,
	view.php: Added Jsxaal support with Emargo features enabled.

2009-09-16  Juan Pedro Bolivar Puente  <raskolnikov@es.gnu.org>

	* emargo/ajax/ajaxfunctions.php, lib.php, view.php,
	editorparagraph.php: Added XAAL support using Jsxaal. Only work
	with the comment functionality disabled.

	* jsxaal/*: Imported Jsxaal sources.

	* *: Some more cleanup and changing hardcoded strings by
	translatable ones.

2009-09-13  Juan Pedro Bolivar Puente  <raskolnikov@es.gnu.org>

	* editparagraph.php: Added automatic paragraph breaking support.

	* lib.php (vizcosh_search_vizalgos): Factored out algorithm
	visualization search.

	* *: Mayor code clean-up. Substituted hard-coded text strings by
	proper Moodle translatable strings.

2009-09-12  Juan Pedro Bolivar Puente  <raskolnikov@es.gnu.org>

	* addvis.html, editorvis.html: Fixed xhtml output. Added a cancel
	button.

	* editorvis.php, editparagraph.php: Added cancel button behaviour.

	* addvis.php:
		Fixed search functionality.
		Now correctly hides other courses visualizations.

2009-09-11  Juan Pedro Bolivar Puente  <raskolnikov@es.gnu.org>

	* editorvis.php, generatethumb.php: Major code cleanup. No longer
	using temporary files.

	* dl_thumb.php, dl_jnlp.php, dl_data.php: Substitute openjnlp.php,
	createjnlp.php and no longer require any temporary files.

	* *: Some other cleanup changes all around the code.

	* install.xml: Added a course field in the vizalgos tab.

2009-09-09  Juan Pedro Bolivar Puente  <raskolnikov@es.gnu.org>

	* ChangeLog: Started changelog file.
